src/_scss/_portfolio.scss
body.portfolio.list {
    #main {
    }
}


.project-list {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    box-sizing: border-box;
    column-gap: ($spacer-horizontal * 2);
    row-gap: 0;

    &>h2 {
        flex: 1 0 100%;
    }

    &>p {
        flex: 1 0 100%;
    }

    .project {
        display: flex;
        flex-direction: column;
        flex: 1 0 100%;
        justify-content: center;
        margin: 0 0 ($spacer-vertical * 2) 0;

        @media (orientation: portrait) {
            flex: 1 0 calc(50% - $spacer-horizontal);
        }
        @media (max-width: $breakpoint-phone) {
            flex: 1 0 100%;
        }
        header {
            // display: none;
            h3 {
                // margin: 0;
                text-align: center;
            }
            p {
                // @include small-type;
                margin-bottom: 0;
                color: $text-color-subdued;                
            }
            p.timeline{
                display: none;
            }
        }
        transition: all $animation-speed $animation-easing;
        figure,p.figure {
            width: 100%;
            margin: 0;
            padding: 0;
            border-radius: $border-radius;
            // box-shadow: 0 2px 8px $shadow-color, 0 8px 24px $shadow-color;
            transform: scale(1);
            background: transparent;
            a {
                display: block;
            }
            img {
                border-radius: ($border-radius * 2);
                display: block;
                width: 100%;
                // height: 80vh;
                object-fit: cover;
                box-sizing: border-box;
                filter: saturate(100%);
                transition: all $animation-speed $animation-easing;
                transform: scale(1);
                @media (orientation: portrait) {
                    height: auto;
                }
            }
        }

        &:hover {
            z-index: 3;
            transform: scale(1.05);
            figure,p.figure {
            }
            img {
                box-shadow: $shadow;
                filter: saturate(150%);
            }           
        }

        &.full {
            flex-direction: row-reverse;
            // min-height: 13.25vw;
            align-items: center;
            overflow: visible;
            flex: 1 0 100%;
            height: auto;
            column-gap: $spacer-horizontal;
            row-gap: 0;

            @media (orientation: portrait) {
                flex-direction: column-reverse;
            }


            &>header {
                display: block;
                // margin-left: $spacer-horizontal;
                h2,h3 {
                    text-align: left;
                    margin-bottom: 0;
                }
                flex-basis: 38%;
            }
            &>figure,&>.figure {
                flex-basis: 62%;
                // img {
                //     object-fit: cover;
                // }
            }
        }

    }
}

body.project {
    @include item-detail();

    #main {
        p.summary {
            margin-bottom: ($spacer-vertical * 2);
        }
    }
    @media (orientation: portrait) {
        #scrollhint {
            display: none;
        }
    }

    @media (prefers-color-scheme: dark) {
        img[src$=".svg"] {
            filter: contrast(0.01) brightness(2);
        }
    }
}



h1.section,h2.section {
    @include fullWidth();
    padding: $spacer-vertical $grid-margin;
    box-sizing: border-box;
    display: flex;
    align-items: center;
    height: 62vh;
    color: $well-text-color;
    position: relative;
    &:before {
        filter: brightness(0.8);
        content: "";
        background-size: cover;
        background-position: center center;
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100%;
        z-index: -1;
    }
}

